--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
     "homepage": "https://ArtVioletta.github.io/movies-db",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@fontsource/roboto": "^5.0.12",
+        "@mui/icons-material": "^5.15.15",
+        "@mui/material": "^5.15.15",
+        "@redux-devtools/extension": "^3.3.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -19,6 +25,7 @@
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
         "redux": "^5.0.1",
+        "redux-thunk": "^3.1.0",
         "sass": "^1.75.0",
         "sort-by": "^1.2.0",
         "typescript": "^4.9.5",
