--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/node": "^16.18.96",
         "@types/react": "^18.2.77",
         "@types/react-dom": "^18.2.25",
+        "leaflet": "^1.9.4",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.4",
         "react": "^18.2.0",
@@ -56,6 +57,7 @@
         ]
     },
     "devDependencies": {
+        "@types/leaflet": "^1.9.11",
         "gh-pages": "^6.1.1"
     }
 }
